# rust-course-final-project

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs
rust-project/: Cargo.toml  Rocket.toml  package-lock.json  sqlite.db  tailwind.config.js
rust-project/schema/: article.rs  mod.rs  prelude.rs  user.rs
rust-project/src/: api_endpoints.rs  main.rs  templates.rs
rust-project/src/database/: article.rs  user.rs
rust-project/static/: style.css
rust-project/templates/: addpost.html.tera  base.html.tera  index.html.hbs  index.html.tera  login.html.tera  post.html.tera  register.html.tera
rust-project/templates/old/: header.html.hbs  index.html.hbs
