[package]
name = "rust-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "=0.5.0-rc.3"
sea-orm = { version = "^0.11.0", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = ["handlebars", "tera"]
sea-orm-cli = "0.11.2"
